# taribot-rs

./: .dockerignore  .env-dist  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.dev.yml  docker-compose.yml  taribot.service
.github/workflows/: build-docker-image.yml
src/: main.rs
src/api/: gfycat.rs  mod.rs
src/commands/: cat.rs  catvid.rs  mod.rs
