[package]
name = "taribot"
version = "0.1.0"
authors = ["Tarinu <kaarel06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.6"
log = "0.4"
serenity = "0.8"
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.57"

[dependencies.image]
version = "0.23.8"
default-features = false
features = ["jpeg"]

[dependencies.reqwest]
version = "0.10.7"
default-features = false
features = ["rustls-tls", "blocking"]
