[package]
name = "taribot"
version = "0.1.0"
authors = ["Tarinu <kaarel06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10"
rand = "0.8"
serde = "1.0.114"
serde_json = "1.0.57"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.image]
version = "0.23.8"
default-features = false
features = ["jpeg"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
